--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BREGLER Thomas</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="./script.js"></script>
+    <h1>Rock Paper Cisor</h1>
+    <div class="game">
+        <div class="choices">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Cisor</button>
+        </div>
+        <div class="result">
+            <p>Choice one :</p>
+            <p>Your score : <span id="playerScore">0</span></p>
+            <p>Robot score : <span id="computerScore">0</span></p>
+            <p id="resultMessage"></p> <!-- Ajout de l'élément pour afficher le message de résultat -->
+        </div>
+        
+    </div>
+    <button id="reset">Reset</button>
+    <script src="script.js"></script>
 </body>
 </html>
